<resources>
    <string name="app_name">Dine</string>
    <string name="Login" />
    <string name="LoginButton">Login</string>
    <string name="buttonExit">Exit</string>
    <string name="WelcomeText">Hello</string>
    <string name="welcomeLoginButton">Login</string>
    <string name="buttonWelcomeRegister">Register</string>
    <string name="buttonWelcomeExit">Exit</string>
    <string name="title_activity_home_menu_drawer">HomeMenuDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="accept_request">Accept</string>
    <string name="decline_request">Decline</string>
    <string name="choose_file">Choose File</string>
    <string name="upload">Upload</string>
    <string name="back">Back</string>
    <string name="view_menu">View Menu</string>
    <string name="my_request">My Requests</string>
    <string name="edit_details">Edit</string>
</resources>
